# Vision

./: README.md  timeplan.xlsx  ~$timeplan.xlsx
cmake_tutorial/: cmake.tgz
cmake_tutorial/cmake/w01-cpp/: geometry.h  pointers.cpp
plots/: artificial_1.docx
plots/IJRR_1 rovio/: rovio_1_2Dplot.fig  rovio_1_errors.fig  rovio_1_yawerror.fig
postprocessing/: main.m  main.m~
postprocessing/log/: .~lock.rovio_first_analysis.ods#  .~lock.rovio_table_rcars_params.csv#  _rovio_pose.csv  _vicon_firefly_sbx_firefly_sbx.csv  rovio_first_analysis.ods
postprocessing/log/euroc_lucas_equidistant_15features/: SAVE
postprocessing/log/euroc_lucas_equidistant_25features/: SAVE
postprocessing/log/euroc_lucas_equidistant_30features/: SAVE  _imu0.csv  _rovio_pose.csv
postprocessing/log/euroc_lucas_equidistant_40features/: SAVE  _rovio_output.csv  _rovio_pose.csv
postprocessing/log/euroc_lucas_equidistant_5features/: SAVE  _rovio_output.csv
postprocessing/log/old/: 2015-10-15-11-52-58.bag  log.bag  rovio_table_p22021.bag  vicon.csv
postprocessing/scripts/: SAVE  bag2csv.py~  bag_to_csv.py  bag_to_csv.py~  evaluate_rpe.py
safe/: euroc  ijrr  loopfast5_fixed_all  loopfast_all  loopfast_blue  loopfast_fixed_all  loopslow  loopslow_blue  loopslow_vi
semesterthesis/everything/: README.md  timeplan.xlsx
semesterthesis/everything/cmake_tutorial/cmake/w01-cpp/: CMakeLists.txt  cdemo.c  drawable.h  geometry.cpp  oglfirst.cpp  test_geometry.cpp
thesis/Presentation/: Presentation.pptx  Semesterthesis – Final Presentation.docx
thesis/Report/: report.tex
(+69 files in other folders)
